// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cast casts 1`] = `
"
     fn _01_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
fn cast() -> vec3<f32> {
  let v = _01_getValue();
  return v.xyx;
}
"
`;

exports[`cast casts and links 1`] = `
"
    fn _01_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
fn _02_cast() -> vec3<f32> {
  let v = _01_getValue();
  return v.xyx;
}


    fn main() { _02_cast(); }
    "
`;

exports[`cast casts compact swizzle 1`] = `
"
     fn _01_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
fn cast() -> vec4<f32> {
  let v = _01_getValue();
  return vec4<f32>(v.xy, -v.z, v.w) * 2.0;
}
"
`;

exports[`cast casts complex swizzle 1`] = `
"
     fn _01_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
fn cast() -> vec4<f32> {
  let v = _01_getValue();
  return vec4<f32>(-v.x, v.y, -1.0, 0.0) * 2.0;
}
"
`;

exports[`cast swizzles 1`] = `
"fn swizzle(a: vec3<f32>) -> vec3<f32> {
  return a.xyx;
}
"
`;
